--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     <main class="personagens">
         <div class="personagem">
             <img class="imagem" src="./src/img/SUPERMAN.jpg" alt="Superman">
+            <img class="container_responsivo" src="./src/img/cel super.jpg" alt="Superman">
             <div class="conteudo">
                 <i class="logo"></i>
                 <h2 class="nome_personagem">Superman</h2>
@@ -31,6 +32,7 @@
 
         <div class="personagem">
             <img class="imagem" src="./src/img/BAT.jpg" alt="Batman">
+            <img class="container_responsivo" src="./src/img/cel batman.jpg" alt="Batman">
             <div class="conteudo">
                 <i class="logo"></i>
                 <h2 class="nome_personagem">Batman</h2>
@@ -46,6 +48,7 @@
 
         <div class="personagem selecionado">
             <img class="imagem" src="./src/img/WW.jpg" alt="Mulher Maravilha">
+            <img class="container_responsivo" src="./src/img/cel ww.jpg" alt="Mulher Maravilha">
             <div class="conteudo">
                 <i class="logo"></i>
                 <h2 class="nome_personagem">Mulher Maravilha</h2>
@@ -60,6 +63,7 @@
 
         <div class="personagem">
             <img class="imagem" src="./src/img/AQUA.jpg" alt="Aquaman">
+            <img class="container_responsivo" src="./src/img/cel aquaman.jpg" alt="Aquaman">
             <div class="conteudo">
                 <i class="logo"></i>
                 <h2 class="nome_personagem">Aquaman</h2>
@@ -75,6 +79,7 @@
 
         <div class="personagem">
             <img class="imagem" src="./src/img/FLASH.jpg" alt="Flash">
+            <img class="container_responsivo" src="./src/img/cel flash.jpg" alt="Flash">
             <div class="conteudo">
                 <i class="logo"></i>
                 <h2 class="nome_personagem">Flash</h2>
@@ -89,6 +94,7 @@
 
         <div class="personagem">
             <img class="imagem" src="./src/img/CYBORG.jpg" alt="Cyborg">
+            <img class="container_responsivo" src="./src/img/cel cyborg.jpg" alt="Cyborg">
             <div class="conteudo">
                 <i class="logo"></i>
                 <h2 class="nome_personagem">Cyborg</h2>
